Bug 1630732 - Disable moving windows to a different space when the 'screensHaveSeparateSpaces' configuration option is set in Mission Control on Mac OSX. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D72169